half page completed, header, body and quote part done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
+    <div class="main-container">
+
+        <div class="item header-flex">
+            <div class="item-header" style="width: 23%;">
+                <p class="header-logo">Header Logo</p>
+                <p style="font-size: 48px;color: #F9FAF8; font-weight: 900;">This website is awesome</p>
+                <p style="font-size: 18px;color: #E5E7EB;">This website has some subtext that goes here under the main
+                    title. It's a smaller font and the color is lower contrast</p>
+                <button
+                    style="background-color: #3882f6; font-size: 18px; width: 120px; color: #E5E7EB; border-radius: 10%; "
+                    type="submit">Sign up</button>
+            </div>
+            <div class="item-header">
+                <div class="img-head-flex">
+                    <div class="img-head-item" style="margin-left: 40px;">
+                        <div class="menu-flex" style="margin-top: 30px;">
+                            <div class="menu-flex-item">
+                                <a href="#">Header Link One</a>
+                            </div>
+                            <div class="menu-flex-item">
+
+                                <a href="#">Header Link Two</a>
+                            </div>
+                            <div class="menu-flex-item">
+
+                                <a href="#">Header Link Three</a>
+                            </div>
+                        </div>
+                        <div class="img-head-item" style="margin-top: 80px;">
+
+                            <img src="placeholde.png" alt="some img">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <p style="font-size: 36px; color: #1F2937; font-weight: 900; text-align: center; width: 100%;">Some random
+            information
+        </p>
+        <div class="item body-flex">
+
+
+            <div class="container">
+                <div class="item-body-flex">
+                    <div class="item-body-flex cont">
+
+                    </div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="item-body-flex">
+
+                    <div class="item-body-flex cont">
+
+                    </div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="item-body-flex">
+
+                    <div class="item-body-flex cont">
+
+                    </div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="item-body-flex">
+
+                    <div class="item-body-flex cont">
+
+                    </div>
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+        </div>
+
+
+<div class="item quote-flex">
+    <div class="item-quote-flex">
+        <p style="font-size:36px; color:#1F2937; font-style: italic; font-weight: 300; width: 50%; margin: auto;">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p style="font-size: 26px; color: #1F2937; font-weight: 900; text-align: center; width: 50%; margin-left: auto;">-Thor, God of Thunder</p>
+        </div>
     
+</div>
+
+
+
+
+    </div>
+
+
+
+
+
+
 </body>
+
 </html>
