a working replica created

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p style="font-size: 18px;color: #E5E7EB;">This website has some subtext that goes here under the main
                     title. It's a smaller font and the color is lower contrast</p>
                 <button
-                    style="background-color: #3882f6; font-size: 18px; width: 120px; color: #E5E7EB; border-radius: 10%; "
+                    style="background-color: #3B82F6; font-size: 18px; width: 120px; color: #E5E7EB; border-radius: 10px; border-color: #3B82F6;width: 33%; height: 35px; "
                     type="submit">Sign up</button>
             </div>
             <div class="item-header">
@@ -89,23 +89,46 @@
         </div>
 
 
-<div class="item quote-flex">
-    <div class="item-quote-flex">
-        <p style="font-size:36px; color:#1F2937; font-style: italic; font-weight: 300; width: 50%; margin: auto;">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-    <p style="font-size: 26px; color: #1F2937; font-weight: 900; text-align: center; width: 50%; margin-left: auto;">-Thor, God of Thunder</p>
+        <div class="item quote-flex">
+            <div class="item-quote-flex">
+                <p
+                    style="font-size:36px; color:#1F2937; font-style: italic; font-weight: 300; width: 50%; margin: auto;">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p
+                    style="font-size: 26px; color: #1F2937; font-weight: 900; text-align: center; width: 50%; margin-left: auto;">
+                    -Thor, God of Thunder</p>
+            </div>
+
         </div>
-    
-</div>
+
+        <div class="item call-for-action-flex">
+
+            <div class="div-cont">
+                <div class="div-cont-item">
+                    <p style="font-size: 26px;color: #F9FAF8;">Call to action! It's time!</p>
+                    <p style="font-size: 16px;color: #F9FAF8; font-weight: 300;">Sign up for our product by clicking
+                        that button right over there!</p>
+                </div>
+                <div class="div-cont-item">
+                    <button
+                        style="font-size: 20px; background-color: inherit; color:#F9FAF8; border-radius: 10px; border-color: #F9FAF8; width: 30%; height: 40px; border-width: 3px;">Sign
+                        up</button>
+                </div>
+
+            </div>
+
+        </div>
 
 
 
+        <div class="item footer-flex">
+            <div class="footer-cont">
+                <p style="color: #FDFEFF; ">Copyright &copy; The Odin Project 2024</p>
+            </div>
+        </div>
 
     </div>
-
-
-
-
 
 
 </body>
